# gcr_ball_collection_repo

./: IPT.py
gcr_ball_collection/: CMakeLists.txt  package.xml
gcr_ball_collection/config/: custom_botsort.yaml
gcr_ball_collection/src/: ball_collection_bot_sort_node.py  ball_collection_node.py
gcr_bringup/: CMakeLists.txt  package.xml
gcr_bringup/launch/: gazebo_model.launch.py
gcr_controller/: CMakeLists.txt  package.xml
gcr_controller/config/: gcr_controllers.yaml
gcr_controller/src/: ball_remover.py  move_ball_collector.py  move_camera.py
gcr_diff_robot/: CMakeLists.txt  package.xml
gcr_diff_robot/model/: ball_collector.xacro  camera.xacro  common_properties.xacro  robot.gazebo.xacro  robot.ros2_control.xacro  robot.urdf  robot.urdf.xacro
gcr_diff_robot/rviz/: display.rviz
gcr_diff_robot/worlds/: golf_ground.world  my_world.world
gcr_obj_detect/: CMakeLists.txt  package.xml
gcr_obj_detect/msg/: YoloDetection.msg  YoloDetectionArray.msg
gcr_obj_detect/scripts/: object_detection_node.py
